# mermaid-buffer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: audit_release.py
src/buffmaid/: __init__.py  cli.py  convert.py
src/mermaid_buffer/: __init__.py  cli.py  convert.py  seed_codes.py
tests/: test_convert.py
